edgevox-onnx/c-api/c-api.h

/**
 * @brief Configuration shared by voice activity detectors.
 *
 * Exactly one VAD model family should be configured. Set either
 * @c silero_vad.model or @c ten_vad.model.
 *
 * If both are configured, the implementation will choose one of them, and
 * which one is used is implementation-defined. Do not rely on any precedence
 * rule.
 *
 * Example model files:
 * - `./silero_vad.onnx`
 * - `./ten-vad.onnx`
 *
 * @code
 * EdgevoxOnnxVadModelConfig config;
 * memset(&config, 0, sizeof(config));
 *
 * config.silero_vad.model = "./silero_vad.onnx";
 * config.silero_vad.threshold = 0.25f;
 * config.silero_vad.min_silence_duration = 0.5f;
 * config.silero_vad.min_speech_duration = 0.5f;
 * config.silero_vad.max_speech_duration = 10.0f;
 * config.silero_vad.window_size = 512;
 *
 * config.sample_rate = 16000;
 * config.num_threads = 1;
 * config.provider = "cpu";
 * config.debug = 0;
 * @endcode
 * @see EdgevoxOnnxCreateVoiceActivityDetector
 */
typedef struct EdgevoxOnnxVadModelConfig {
  /** Silero VAD configuration. */
  EdgevoxOnnxSileroVadModelConfig silero_vad;
  /** Input sample rate expected by the detector, usually 16000. */
  int32_t sample_rate;
  /** Number of backend threads. */
  int32_t num_threads;
  /** Execution provider, for example "cpu" or "cuda". */
  const char *provider;
  /** Non-zero to print debug information. */
  int32_t debug;
  /** Ten VAD configuration. */
  EdgevoxOnnxTenVadModelConfig ten_vad;
} EdgevoxOnnxVadModelConfig;
/** @brief Opaque circular-buffer handle used by helper APIs. */
typedef struct EdgevoxOnnxCircularBuffer EdgevoxOnnxCircularBuffer;
/**
 * @brief Create a floating-point circular buffer.
 *
 * @param capacity Maximum number of samples the buffer can keep.
 * @return A newly allocated buffer. Free it with
 *         EdgevoxOnnxDestroyCircularBuffer().
 *
 * @code
 * const EdgevoxOnnxCircularBuffer *buffer =
 *     EdgevoxOnnxCreateCircularBuffer(16000 * 30);
 * @endcode
 */
EDGEVOX_ONNX_API const EdgevoxOnnxCircularBuffer *EdgevoxOnnxCreateCircularBuffer(
    int32_t capacity);
/**
 * @brief Destroy a circular buffer.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 *
 * @code
 * EdgevoxOnnxDestroyCircularBuffer(buffer);
 * buffer = NULL;
 * @endcode
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyCircularBuffer(
    const EdgevoxOnnxCircularBuffer *buffer);
/**
 * @brief Append samples to a circular buffer.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 * @param p Pointer to @p n samples.
 * @param n Number of samples.
 *
 * @code
 * EdgevoxOnnxCircularBufferPush(buffer, wave->samples, wave->num_samples);
 * @endcode
 */
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferPush(
    const EdgevoxOnnxCircularBuffer *buffer, const float *p, int32_t n);
/**
 * @brief Copy out a slice of samples from a circular buffer.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 * @param start_index Absolute start index in the buffer timeline.
 * @param n Number of samples to copy.
 * @return A newly allocated array containing @p n samples. Free it with
 *         EdgevoxOnnxCircularBufferFree().
 *
 * @code
 * const float *samples = EdgevoxOnnxCircularBufferGet(buffer, start, 3200);
 * EdgevoxOnnxCircularBufferFree(samples);
 * @endcode
 */
EDGEVOX_ONNX_API const float *EdgevoxOnnxCircularBufferGet(
    const EdgevoxOnnxCircularBuffer *buffer, int32_t start_index, int32_t n);
/** @brief Free an array returned by EdgevoxOnnxCircularBufferGet(). */
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferFree(const float *p);
/**
 * @brief Drop samples from the front of a circular buffer.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 * @param n Number of samples to remove.
 */
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferPop(
    const EdgevoxOnnxCircularBuffer *buffer, int32_t n);
/**
 * @brief Return the number of currently stored samples.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 * @return Number of samples currently in the buffer.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxCircularBufferSize(const EdgevoxOnnxCircularBuffer *buffer);
/**
 * @brief Return the current head index of the buffer timeline.
 *
 * The value is monotonically non-decreasing until
 * EdgevoxOnnxCircularBufferReset() is called.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 * @return The current head index.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxCircularBufferHead(const EdgevoxOnnxCircularBuffer *buffer);
/**
 * @brief Clear a circular buffer and reset its head index.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferReset(
    const EdgevoxOnnxCircularBuffer *buffer);
/**
 * @brief One detected speech segment returned by the VAD.
 *
 * The segment owns @c samples. Free the whole object with
 * EdgevoxOnnxDestroySpeechSegment().
 * @see EdgevoxOnnxVoiceActivityDetectorFront, EdgevoxOnnxDestroySpeechSegment
 */
typedef struct EdgevoxOnnxSpeechSegment {
  /** Start index, in input samples, of this segment. */
  int32_t start;
  /** Newly allocated mono samples for this segment. */
  float *samples;
  /** Number of samples in @c samples. */
  int32_t n;
} EdgevoxOnnxSpeechSegment;
/** @brief Opaque voice activity detector handle. */
typedef struct EdgevoxOnnxVoiceActivityDetector EdgevoxOnnxVoiceActivityDetector;
/**
 * @brief Create a voice activity detector.
 *
 * Example model files are shown in `c-api-examples/vad-whisper-c-api.c`.
 *
 * @param config VAD configuration.
 * @param buffer_size_in_seconds Internal buffering capacity in seconds.
 * @return A newly allocated detector on success, or NULL on configuration
 *         error. Free it with EdgevoxOnnxDestroyVoiceActivityDetector().
 *
 * @code
 * EdgevoxOnnxVadModelConfig config;
 * memset(&config, 0, sizeof(config));
 * config.silero_vad.model = "./silero_vad.onnx";
 * config.silero_vad.threshold = 0.25f;
 * config.silero_vad.min_silence_duration = 0.5f;
 * config.silero_vad.min_speech_duration = 0.5f;
 * config.silero_vad.max_speech_duration = 10.0f;
 * config.silero_vad.window_size = 512;
 * config.sample_rate = 16000;
 * config.num_threads = 1;
 *
 * const EdgevoxOnnxVoiceActivityDetector *vad =
 *     EdgevoxOnnxCreateVoiceActivityDetector(&config, 30.0f);
 * @endcode
 * @see EdgevoxOnnxVadModelConfig, EdgevoxOnnxDestroyVoiceActivityDetector
 */
EDGEVOX_ONNX_API const EdgevoxOnnxVoiceActivityDetector *
EdgevoxOnnxCreateVoiceActivityDetector(const EdgevoxOnnxVadModelConfig *config,
                                      float buffer_size_in_seconds);
/**
 * @brief Destroy a voice activity detector.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 * @see EdgevoxOnnxCreateVoiceActivityDetector
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyVoiceActivityDetector(
    const EdgevoxOnnxVoiceActivityDetector *p);
/**
 * @brief Feed audio samples to the VAD.
 *
 * Input samples are mono floating-point PCM in the range [-1, 1].
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 * @param samples Pointer to @p n samples.
 * @param n Number of samples.
 *
 * @code
 * EdgevoxOnnxVoiceActivityDetectorAcceptWaveform(vad,
 *                                               wave->samples + i,
 *                                               window_size);
 * @endcode
 */
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorAcceptWaveform(
    const EdgevoxOnnxVoiceActivityDetector *p, const float *samples, int32_t n);
/**
 * @brief Check whether the detector currently has any completed speech segment.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 * @return 1 if no completed speech segment is available; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxVoiceActivityDetectorEmpty(const EdgevoxOnnxVoiceActivityDetector *p);
/**
 * @brief Check whether the detector is currently inside speech.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 * @return 1 if speech is currently detected; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxVoiceActivityDetectorDetected(
    const EdgevoxOnnxVoiceActivityDetector *p);
/**
 * @brief Remove the front speech segment from the detector queue.
 *
 * Call this after consuming the segment returned by
 * EdgevoxOnnxVoiceActivityDetectorFront().
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 *
 * @code
 * const EdgevoxOnnxSpeechSegment *segment =
 *     EdgevoxOnnxVoiceActivityDetectorFront(vad);
 * // ... use segment ...
 * EdgevoxOnnxDestroySpeechSegment(segment);
 * EdgevoxOnnxVoiceActivityDetectorPop(vad);
 * @endcode
 */
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorPop(
    const EdgevoxOnnxVoiceActivityDetector *p);
/**
 * @brief Remove all queued speech segments.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorClear(
    const EdgevoxOnnxVoiceActivityDetector *p);
/**
 * @brief Get the first queued speech segment.
 *
 * The returned segment is a copy owned by the caller. Free it with
 * EdgevoxOnnxDestroySpeechSegment().
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 * @return The first queued speech segment, or NULL if none is available.
 *
 * @code
 * while (!EdgevoxOnnxVoiceActivityDetectorEmpty(vad)) {
 *   const EdgevoxOnnxSpeechSegment *segment =
 *       EdgevoxOnnxVoiceActivityDetectorFront(vad);
 *   printf("start=%d, samples=%d\n", segment->start, segment->n);
 *   EdgevoxOnnxDestroySpeechSegment(segment);
 *   EdgevoxOnnxVoiceActivityDetectorPop(vad);
 * }
 * @endcode
 * @see EdgevoxOnnxSpeechSegment, EdgevoxOnnxDestroySpeechSegment
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpeechSegment *
EdgevoxOnnxVoiceActivityDetectorFront(const EdgevoxOnnxVoiceActivityDetector *p);
/**
 * @brief Destroy a speech segment returned by
 * EdgevoxOnnxVoiceActivityDetectorFront().
 *
 * @param p A pointer returned by EdgevoxOnnxVoiceActivityDetectorFront().
 * @see EdgevoxOnnxVoiceActivityDetectorFront
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeechSegment(
    const EdgevoxOnnxSpeechSegment *p);
/**
 * @brief Reset a voice activity detector so it can process a new stream.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorReset(
    const EdgevoxOnnxVoiceActivityDetector *p);
/**
 * @brief Flush buffered tail samples and force final segmentation.
 *
 * Call this after the last chunk of input has been fed.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateVoiceActivityDetector().
 *
 * @code
 * EdgevoxOnnxVoiceActivityDetectorFlush(vad);
 * @endcode
 */
EDGEVOX_ONNX_API void EdgevoxOnnxVoiceActivityDetectorFlush(
    const EdgevoxOnnxVoiceActivityDetector *p);