edgevox-onnx/c-api/cxx-api.h

// ==============================
// VAD
// ==============================

/** @brief Silero VAD model configuration. */
struct SileroVadModelConfig {
  /** Model ONNX file. */
  std::string model;
  /** Detection threshold. */
  float threshold = 0.5;
  /** Minimum silence duration in seconds. */
  float min_silence_duration = 0.5;
  /** Minimum speech duration in seconds. */
  float min_speech_duration = 0.25;
  /** Window size in samples. */
  int32_t window_size = 512;
  /** Maximum speech duration in seconds before forced split. */
  float max_speech_duration = 20;
};
/** @brief Ten VAD model configuration. */
struct TenVadModelConfig {
  /** Model ONNX file. */
  std::string model;
  /** Detection threshold. */
  float threshold = 0.5;
  /** Minimum silence duration in seconds. */
  float min_silence_duration = 0.5;
  /** Minimum speech duration in seconds. */
  float min_speech_duration = 0.25;
  /** Window size in samples. */
  int32_t window_size = 256;
  /** Maximum speech duration in seconds before forced split. */
  float max_speech_duration = 20;
};
/**
 * @brief VAD model configuration.
 *
 * Configure exactly one model family. If multiple model families are set, one
 * is chosen and the choice is implementation-defined.
 */
struct VadModelConfig {
  /** Silero VAD configuration. */
  SileroVadModelConfig silero_vad;
  /** Ten VAD configuration. */
  TenVadModelConfig ten_vad;

  /** Input sample rate in Hz. */
  int32_t sample_rate = 16000;
  /** Number of inference threads. */
  int32_t num_threads = 1;
  /** Execution provider such as `"cpu"`. */
  std::string provider = "cpu";
  /** Enable verbose debug logging. */
  bool debug = false;
};
/** @brief One speech segment produced by the VAD wrapper. */
struct SpeechSegment {
  /** Start sample index relative to the processed audio timeline. */
  int32_t start = 0;
  /** Speech samples for the segment. */
  std::vector<float> samples;
};